[project]
name = "satmaps"
version = "0.1.1"
description = "High-performance PMTiles from Sentinel-2 Global Mosaics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gdal>=3.4.0",
    "numpy>=1.20.0",
    "scipy>=1.11.0",
    "flask>=3.0.0",
    "pillow>=10.0.0",
    "mgrs",
]

[tool.setuptools]
py-modules = ["ocean", "satmaps", "tiler", "tuner_ui"]

[tool.setuptools.package-data]
"*" = ["templates/*.html"]

[project.scripts]
ocean = "ocean:main"
satmaps = "satmaps:main"
satmaps-tuner = "tuner_ui:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = ["E701"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
